Hopefully fixes the broken styles

--- a/Golfbook/public/stylesheets/golfbook.css
+++ b/Golfbook/public/stylesheets/golfbook.css
@@ -626,5 +626,5 @@ ul.scorecard {
 
 .expanded_rating a:visited {
 	color:#333333;
-	font-size:8px;
+	/* font-size:8px; */
 }
